# RT

./: .gitignore  CMakeLists.txt  Makefile  Mirror.json  README.md  Untitled.json  author  bunny.json  del.json  main.c
extras/normalmaps/: Wood_n.ppm  bubble.ppm  f2.ppm  golf.ppm  metal.ppm  metal_plate.ppm  nit.ppm  snake.ppm  snake2.ppm  sofa.ppm  water.ppm  wow.ppm
extras/off/: bunny.off  bunny_simple_2k.off  bunny_simple_4k.off  double_torus2.off  dragon.off  torus.off  torus_simple.off
extras/textures/: 360.ppm  4.ppm  5k.ppm  Normal_maps.ppm  Probka.ppm  Wood.ppm  Wood_floor.ppm  laminate.ppm  marble.ppm  nova2.ppm  nova3.ppm  snow_1.ppm  snow_2.ppm  wallpaper.ppm  wood_wall.ppm
inc/: gtk_module.h  ocl.h  parser.h  rt.h  scene.h  utils.h
include/: gtk_module.h  info.h  ocl.h  parser.h  scene.h  serializer.h
kernel/: color.cl  filters.cl  include.cl  intersections.cl  intersections2.cl  light.cl  normals.cl  perlin_noise.cl  random.cl  ray.cl  ray_tracing.cl  ray_tracing2.cl  reflect.cl  refract.cl  sections.cl  semi_intersections.cl  uv_mapping.cl  uv_patterns.cl
libft/inc/: libft.h
libft/src/: ft_error.c  ft_get_text_file.c  ft_str_to_upper.c  ft_strlcat.c  ft_strstr.c
libraries/jcparser/: Makefile
libraries/jcparser/api/: jc_additional_utils.c  jc_clear_all.c  jc_get_bool.c  jc_get_field.c  jc_get_float.c  jc_get_string.c
libraries/jcparser/include/: jc_data.h  jc_parser.h  jcp_parser.h
libraries/jcparser/private/: jcp_check_for_number.c  jcp_create_t_jcp_object.c  jcp_field_with_index.c  jcp_free_tree.c  jcp_get_elem_by_idx.c  jcp_get_element.c  jcp_get_main_object.c  jcp_get_obj_by_key.c  jcp_get_object.c  jcp_get_object_name.c  jcp_get_value_by_type.c  jcp_get_value_of_bool.c  jcp_get_value_of_null.c  jcp_get_value_of_num.c  jcp_get_value_of_obj_or_arr.c  jcp_get_value_of_str.c  jcp_parent_dot_child.c  jcp_print_bad_type_error.c  jcp_skip_whitespaces.c  jcp_str_of_types.c
libraries/libft/: Makefile
libraries/libft/inc/: ftprintf.h  libft.h
libraries/libft/src/: ft_abs.c  ft_atoi.c  ft_bzero.c  ft_dabs.c  ft_del.c  ft_dlstargv.c  ft_dlstdel.c  ft_dlstdelone.c  ft_dlstlen.c  ft_dlstnew.c  ft_dlstsplit.c  ft_error.c  ft_get_text_file.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_lstabi.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlen.c  ft_lstmap.c  ft_lstnew.c  ft_lstsplit.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_printf.c  ft_putchar.c  ft_putchar_fd.c  (+41 more)
libraries/oclmath/: Makefile
libraries/oclmath/include/: ocl_math.h
libraries/oclmath/source/: deg_to_rad.c  degrees_to_rad.c  i2_sub.c  rad_to_deg.c  v2_angle.c  v2_det.c  v2_dot.c  v2_length.c  v2_norm.c  v2_scale.c  v3_add.c  v3_angle_to_xz.c  v3_cross.c  v3_dot.c  v3_length.c  v3_length_sq.c  v3_norm.c  v3_rotate.c  v3_scale.c  v3_sub.c
scene/: Check_ball_room.json  Mirror.json  Mirror_emboss.json  Mirror_sphere.json  Satelite.json  all_objects.json  another_view.json  army.json  atom_spec_ref_zerk.json  capped_plane.json  chess_box.json  circle.json  color_check_ball.json  fragile.json  gif.json  glass.json  house.json  house2.json  house3.json  key_on_postament.json  kn_scene.json  min.json  multi_section.json  multicolor.json  normal_maps.json  objects_1.json  portal.json  pseudo_box.json  pseudo_box1.json  ruins.json  scene.json  scene1.json  scene2.json  scene3.json  scene4test.json  sceneBox.json  sceneCapperCylinder.json  sceneEllipse.json  sceneEllipsoid.json  scene_macos.json  (+4 more)
scene/check_ball/: Check_ball_room.json  another_view.json  color_check_ball.json
source/gtk/actions/: camera_motion.c  camera_with_shape.c  change_shape_param.c  delete_ppm_img.c  do_change_off_dots.c  do_change_shape_param.c  draw_by_timeout.c  draw_image.c  error_message_dialog.c  get_new_file_name.c  get_shape_id.c  holders_cnt.c  make_action.c  make_update_args.c  new_ppm_img_init.c  new_ppm_img_update_everything.c  new_shape_update_everything.c  restart_position.c  sections_motion.c  serialize_scene_to_json.c  shape_motion.c  update_cam.c  update_camera_widget.c  update_flags.c  update_light_widget.c  update_marker.c  update_shape_widget.c  update_shapes_flags.c
source/gtk/callbacks/: button_on_image_event_box.c  camera_expander_callback.c  (+29 more)
source/parser/: check_reserved_names.c  parse_camera.c  parse_cl_float3.c  parse_color.c  parse_error.c  parse_light.c  parse_material.c  parse_scene.c  parse_sections.c  parse_settings.c  parse_shape.c  parse_shape_param_by_type.c  parse_standard_lights.c  parse_standard_shapes.c  parse_textures.c  parse_transform.c  parse_type.c  parser_utils.c
source/serializer/: serialize_camera.c  serialize_float3.c  serialize_int2.c  serialize_lights.c  serialize_material.c  serialize_ppm_img.c  serialize_reserved_ppm_names.c  serialize_scene.c  serialize_sections.c  serialize_settings.c  serialize_shapes.c  serialize_start.c  serialize_transform.c  serialize_type_name.c
src/: vector_add.c  vector_add.cl
src/gtk/: draw_image.c  gtk_set_main_window.c  gtk_set_objects.c  gtk_set_positions.c  gtk_set_signals.c  new_scene.c  run_app.c
src/kernel/: ray_tracing.cl
src/opencl/: compile_cl.c  create_cl.c  error_cl.c  run_cl.c  set_params_cl.c
src/parser/: get_color_by_obj.c  get_float_by_obj.c  get_material_by_obj.c  get_obj_by_key.c  get_parsed_json.c  get_transform_by_obj.c  get_vec3_by_obj.c  jc_clear_field.c  jc_field_with_index.c  jc_get_array_length.c  jc_get_camera.c  jc_get_cl_float3.c  jc_get_color.c  jc_get_field.c  jc_get_float.c  jc_get_material.c  jc_get_obj_by_key.c  jc_get_parsed_json.c  jc_get_shapes.c  jc_get_transform.c  jc_parent_dot_child.c  parent_dot_child.c  parse.c  parse_camera.c  parse_cl_float3.c  parse_color.c  parse_error.c  parse_light.c  parse_material.c  parse_scene.c  parse_shape.c  parse_standard_lights.c  parse_standard_shapes.c  parse_transform.c  parse_type.c
src/rt/: rt_del.c  rt_init.c
src/utils/: usage.c
textures/: 4.ppm  dan.ppm  earth.ppm  nova.ppm  space.ppm
(+220 files in other folders)
